# advent-of-code

2025/: pyproject.toml
2025/day01/: __init__.py  part1.py  part2.py
2025/day02/: part1.py  part2.py
2025/day03/: part1.py  part2.py
2025/day04/: part1.py  part2.py
2025/day05/: part1.py  part2.py
2025/day06/: part1.py  part2.py
2025/day07/: part1.py  part2.py
2025/day08/: input.txt  part1.py  part2.py
